# blog

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/blog/: settings.py  urls.py
backend/pages/: serializers.py  tests.py
backend/pages/management/commands/: ensure_superuser.py
backend/posts/: admin.py  models.py  serializers.py
backend/posts/migrations/: 0001_initial.py  0003_post_add_categories.py  0004_migrate_category_data.py  0005_post_remove_category.py
blog/: settings.py  urls.py
docs/superpowers/plans/: 2026-06-06-about-page.md  2026-06-06-blog-posts-app.md  2026-06-06-zen-theme.md
docs/superpowers/specs/: 2026-06-06-about-page-design.md  2026-06-06-blog-posts-design.md  2026-06-06-zen-theme-design.md
frontend/: .cta.json  .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/lib/: api.ts  posts.ts  theme.ts
frontend/src/routes/: __root.tsx  index.tsx  rss[.]xml.ts
frontend/src/utils/: date.ts
pages/: admin.py  api.py  models.py  tests.py  views.py
pages/migrations/: 0001_initial.py
pages/templates/pages/: about.html
posts/: admin.py  api.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0002_post.py
posts/static/posts/: style.css
posts/templates/posts/: base.html  post_detail.html  post_list.html
posts/templatetags/: markdown_extras.py
static/pages/: style.css
templates/pages/: about.html
templates/posts/: base.html  category_detail.html  post_detail.html  post_list.html
(+36 files in other folders)
