[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "mypy>=2.1.0",
]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "blog.settings"
