[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-storages[s3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "django-stubs>=6.0.5",
    "mypy>=2.1.0",
]

[tool.django-stubs]
django_settings_module = "blog.settings"
